--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -86,3 +86,22 @@ canvas {
 .color0 > span {
     background-color: #FF0000;
 }
+
+#copterface {
+    opacity: 0.5;
+    position: absolute;
+    z-index: 10;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+}
+
+#copterface-label {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: white;
+    font-family: Arial;
+} 
